GL/Projet_GL/src/test/deca/codegen/invalid/div_int_0.deca
// Description:
//    Test de division par zéro avec des int.
//    Sert à vérifier le branchement vers l'étiquette d'erreur de division par 0 pour les int.
//
// Resultats:
//    Erreur à l'exécution : division par zéro pour les entiers.

{
    int a = 10 ;
    int b = 0 ;
    println(a / b) ;
}
